1999-12-10  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-send-mail): Clarify some prompts.
	Reported by Laurent Bourbeau.

1999-07-25  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-team-name-to-code): New variable.
	(po-guess-archive-name): Use it.

1999-06-01  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-guess-archive-name, po-guess-team-address): Accept
	more addresses, do not restrict to necessarily @li.org.

1998-12-06  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-guess-archive-name): Allow Free as well as GNU
	for domain name prefix.

1998-05-15  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-any-msgid-regexp, po-any-msgstr-regexp,
	po-msgstr-idx-keyword-regexp, po-obsolete-msgstr-regexp,
	po-set-msgstr, po-obsolete-comment-regexp, po-get-comment): Enforce
	#~ for obsolete entries.  The tilde is not optional anymore.

1998-05-09  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-after-entry-regexp): Check if at end of line, rather
	than for any character not being quoted.  Else, M-u skips over
	immediately previous untranslated entry, because backward pattern
	extends beyond point.  Reported by Kalle Niemitalo.

2001-07-13  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-validate): Check for 'null-device; if not available
	use "NUL" for windows-nt and windows-95 and /dev/null as fallback.
	From Eli Zaretskii and François Pinard.

2000-01-03  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-preset-string-functions): New function.
	(po-find-unknown-string, po-mark-unknown-string): New functions.
	(po-find-c-string): Return a 3-element list.
	(po-find-emacs-lisp-string): Likewise.
	(po-mark-found-string): Simplify consequently.
	(po-tags-loop-scan): Use po-preset-string-functions.

	* po-mode.el (po-mark-c-string, po-mark-emacs-lisp-string): Have
	marking functions to leave cursor after marked string.  Do not return
	updated end anymore.
